--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,26 +1,32 @@
-jobs:
-  on: [push]
-  test:
-    name: Ex1 (${{ matrix.python-version }}, ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: ["3.11", "3.12"]
-    steps:
-      - uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-          activate-environment: bdm_voxel_builder
-          environment-file: environment.yml
-      - name: Conda info
-        shell: pwsh
-        run: conda info
-      - name: Conda list
-        shell: pwsh
-        run: conda list
-      - name: pytest
-        shell: pwsh
-        run: invoke test
+  name: Test
+  on:
+    workflow_dispatch:
+    push:
+      branches:
+        - main
+    pull_request:
+  jobs:
+    test:
+      name: Ex1 (${{ matrix.python-version }}, ${{ matrix.os }})
+      runs-on: ${{ matrix.os }}
+      strategy:
+        fail-fast: false
+        matrix:
+          os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+          python-version: ["3.11", "3.12"]
+      steps:
+        - uses: conda-incubator/setup-miniconda@v3
+          with:
+            auto-update-conda: true
+            python-version: ${{ matrix.python-version }}
+            activate-environment: bdm_voxel_builder
+            environment-file: environment.yml
+        - name: Conda info
+          shell: pwsh
+          run: conda info
+        - name: Conda list
+          shell: pwsh
+          run: conda list
+        - name: pytest
+          shell: pwsh
+          run: invoke test
