debug gh action

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
         python-version: ["3.11", "3.12"]
     steps:
       - run: pwd
+      - run: find .
       - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
