--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
   pull_request:
+defaults:
+  run:
+    shell: pwsh
 jobs:
   test:
     name: Test (${{ matrix.python-version }}, ${{ matrix.os }})
@@ -24,9 +27,10 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           environment-file: ./environment.yml
-      - name: pytest
-        shell: pwsh
+      - name: install local package
         run: invoke install
-      - name: pytest
-        shell: pwsh
+      - name: check
+        run: invoke check
+        continue-on-error: true
+      - name: test
         run: invoke test
