--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ requires-python = ">= 3.11"
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.pytest.ini_options]
+addopts = "-vv"
+
+
 [tool.ruff.lint]
 select = [
     # pycodestyle
