--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python Debugger: Module",
             "type": "debugpy",
             "request": "launch",
-            "module": "bdm_voxel_builder"
+            "module": "bdm_voxel_builder",
+            "justMyCode": false
         }
     ]
 }
