--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ channels:
 
 dependencies:
   - click
-  - compas=>2.3.0
+  # - compas=>2.3.0
   - compas_fab
   - compas_viewer
   - invoke
@@ -19,3 +19,6 @@ dependencies:
   - python>=3.11,<4
   - ruff
   - setuptools
+  - pip
+  - pip:
+      - git+https://github.com/tetov/compas.git@fix_expected_Array
