path planning work

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,23 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python Debugger: Module",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "bdm_voxel_builder",
-            "justMyCode": false
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python Debugger: Top",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "bdm_voxel_builder",
+      "justMyCode": false
+    },
+    {
+      "name": "Python Debugger: PPL",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "bdm_voxel_builder.robots.path_plan",
+      "args": ["${workspaceFolder}/temp/frames.json"],
+      "justMyCode": false
+    }
+  ]
 }
